RadioButton working properly. Next up is a small refactor to eliminate some redundant CSS.

--- a/css/RadioGroup.css
+++ b/css/RadioGroup.css
@@ -1,31 +1,75 @@
 .enyo-radio-group {
-/*background-color:red;*/
-/*	vertical-align:middle;*/
-/*	position:relative;*/
 	display:inline-block;
 }
 
 
 .enyo-radio-button {
 	display:inline-block;
-	background-color:red;
-/*	position:relative;*/
-	height:30px;
-	line-height:30px;
-	padding:10px;
+	height:36px;
+	min-width:50px;
+	line-height:36px;
+	padding: 0px 0px;
 	text-align:center;
-	vertical-align:middle;
+	border-width: 0px 16px 0px 16px;
+	-webkit-border-image: url(../images/radiobutton.png) 74 16 482 16;
+	-moz-border-image: url(../images/radiobutton.png) 74 16 482 16 repeat stretch;
 }
 
 .enyo-radio-button.enyo-chosen {
-	background-color:blue;
+	color:white;
+	-webkit-border-image: url(../images/radiobutton.png) 111 16 445 16;
+	-moz-border-image: url(../images/radiobutton.png) 111 16 445 16 repeat stretch;
 }
 
 .enyo-radio-button:first-child {
-	color:green;
+	-webkit-border-image: url(../images/radiobutton.png) 0 16 556 16;
+	-moz-border-image: url(../images/radiobutton.png) 0 16 556 16 repeat stretch;
 }
+.enyo-radio-button.enyo-chosen:first-child {
+	-webkit-border-image: url(../images/radiobutton.png) 37 16 519 16;
+	-moz-border-image: url(../images/radiobutton.png) 37 16 519 16 repeat stretch;
+}
+
 .enyo-radio-button:last-child {
-	color:green;
+	-webkit-border-image: url(../images/radiobutton.png) 148 16 408 16;
+	-moz-border-image: url(../images/radiobutton.png) 148 16 408 16 repeat stretch;
+}
+.enyo-radio-button.enyo-chosen:last-child {
+	-webkit-border-image: url(../images/radiobutton.png) 185 16 371 16;
+	-moz-border-image: url(../images/radiobutton.png) 185 16 371 16 repeat stretch;
+}
+
+.enyo-radio-button.enyo-disabled {
+	opacity:0.6;
 }
 
 
+/* TabGroup */
+
+.enyo-tab-group {
+	border: 1px solid #A7A7A7;
+	border-width: 0px 1px 0px 1px;
+}
+
+.enyo-tab-group > .enyo-radio-button {
+	height: 50px;
+	line-height: 50px;
+}
+
+
+.enyo-radio-group.enyo-tab-group > .enyo-radio-button:first-child {
+	-webkit-border-image: url(../images/radiobutton.png) 74 16 482 16;
+	-moz-border-image: url(../images/radiobutton.png) 74 16 482 16 repeat stretch;
+}
+.enyo-radio-group.enyo-tab-group > .enyo-radio-button.enyo-chosen:first-child {
+	-webkit-border-image: url(../images/radiobutton.png) 111 16 445 16;
+	-moz-border-image: url(../images/radiobutton.png) 111 16 445 16 repeat stretch;
+}
+.enyo-radio-group.enyo-tab-group > .enyo-radio-button:last-child {
+	-webkit-border-image: url(../images/radiobutton.png) 74 16 482 16;
+	-moz-border-image: url(../images/radiobutton.png) 74 16 482 16 repeat stretch;
+}
+.enyo-radio-group.enyo-tab-group > .enyo-radio-button.enyo-chosen:last-child {
+	-webkit-border-image: url(../images/radiobutton.png) 111 16 445 16;
+	-moz-border-image: url(../images/radiobutton.png) 111 16 445 16 repeat stretch;
+}
