--- a/button/source/Button.css
+++ b/button/source/Button.css
@@ -1,4 +1,4 @@
-.enyo-button-decorator {
+.onyx-button {
 	font-size: 16px;
 	padding: 4px 8px;
 	min-width: 14px;
@@ -8,27 +8,19 @@
 	border-width: 4px;
 	border-radius: 5px;
 	margin: 3px;
+	outline: none;
 	color: #292929;
 	background-color: rgba(255,255,255,0.8);
 }
 
-.enyo-button-decorator > button, .enyo-button {
-	border: none;
-	margin: 0;
-	outline: none;
-	background-color: transparent;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-}
-
-.enyo-button-decorator:active:not([disabled]) {
+.onyx-button:active:not([disabled]) {
 	-webkit-border-image: url(../../resources/button-down.png) 4 4 4 4 stretch stretch;
 }
 
-.enyo-button-decorator[disabled] {
+.onyx-button[disabled] {
 	opacity: 0.4;
 }
 
-.enyo-button-decorator > img {
+.onyx-button > img {
 	padding: 0px 3px;
 }
