--- a/groupbox/source/Groupbox.css
+++ b/groupbox/source/Groupbox.css
@@ -2,7 +2,7 @@
 	margin: 4px;
 }
 
-.onyx-groupbox > .onyx-groupbox-item.onyx-groupbox-header {
+.onyx-groupbox-item.onyx-groupbox-header {
 	background-color: #343434;
 	color: white;
 	/**/
@@ -12,18 +12,18 @@
 	padding: 2px 10px;
 }
 
-.onyx-groupbox > .onyx-groupbox-item {
+.onyx-groupbox-item {
 	border-color: #aaaaaa;
 	border-style: solid;
 	border-width: 0 1px 1px 1px;
 	padding: 10px;
 }
 
-.onyx-groupbox > *:first-child {
+.onyx-groupbox-item:first-child {
 	border-width: 1px;
 	border-radius: 4px 4px 0 0;
 }
 
-.onyx-groupbox > *:last-child {
+.onyx-groupbox-item:last-child {
 	border-radius: 0 0 4px 4px;
 }
