various wip styling

--- a/css/onyx.css
+++ b/css/onyx.css
@@ -1,8 +1,7 @@
+/*
 body {
 	background-color: #eaeaea;
 	color: #333;
-	/* remove automatic tap highlight color */
-	-webkit-tap-highlight-color: transparent;
 }
 
 html, body, input, button {
@@ -13,5 +12,17 @@ html, body, input, button {
 
 .enyo-bg {
 	background-color: #eaeaea;
+}
+*/
+
+/*body {*/
+	/* remove automatic tap highlight color */
+/*	-webkit-tap-highlight-color: transparent;
+}*/
+
+.onyx {
+	font-family: Prelude, Prelude Medium, Segoe UI, Arial, Helvetica, Sans-Serif;
+	font-size: 20px;
+	cursor: default;
 }
 
