--- a/button/source/Button.css
+++ b/button/source/Button.css
@@ -1,4 +1,67 @@
 .onyx-button {
+	font-size: 12px;
+	text-align: center;
+	padding: 6px 16px;
+	min-width: 14px;
+	min-height: 20px;
+	/**/
+	white-space: nowrap;
+	overflow: hidden;
+	/**/
+	margin: 0;
+	color: #292929;
+	/**/
+	border: none;
+	border-radius: 3px;
+	/**/
+	background: #E1E1E1 url(gradient.png) repeat-x;
+	box-shadow: inset 0px 0px 1px rgba(0,0,0,0.8), inset 0px 1px 0px rgba(192,192,192,0.25), 0px 1px 1px rgba(128,128,128,0.15);
+	/**/
+	text-overflow: ellipsis;
+}
+
+.onyx-button.active, .onyx-button:active:not([disabled]) {
+	background: url(gradient-invert.png) repeat-x;
+	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.8), inset 0px -1px 0px rgba(192,192,192,0.25), 0px 1px 1px rgba(128,128,128,0.15);
+}
+
+.onyx-button[disabled] {
+	opacity: 0.4;
+}
+
+.onyx-button > img {
+	padding: 0px 3px;
+}
+
+/*
+.onyx-button {
+	font-size: 16px;
+	padding: 4px 8px;
+	min-width: 14px;
+	min-height: 20px;
+	margin: 3px;
+	outline: none;
+	color: #292929;
+	Xborder: 1px solid rgba(0, 0, 0, 0.3);
+	border: none;
+	border-radius: 2px;
+	box-sizing: border-box;
+	box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.8);
+}
+
+.onyx-button {
+	background: #C61616 url(gradient.png) repeat-x;
+	xbox-shadow: inset 0px -1px 2px rgba(128, 128, 128, 0.8);
+}
+
+.onyx-button.active, .onyx-button:active:not([disabled]) {
+	background: #C61616 url(gradient-invert.png) repeat-x;
+	xbox-shadow: inset 0px 1px 3px rgba(128, 128, 128, 0.8);
+}
+*/
+
+/*
+.onyx-button {
 	font-size: 16px;
 	padding: 4px 8px;
 	min-width: 14px;
@@ -13,14 +76,7 @@
 	background-color: rgba(255,255,255,0.8);
 }
 
-.onyx-button:active:not([disabled]) {
+.onyx-button.active, .onyx-button:active:not([disabled]) {
 	-webkit-border-image: url(../../resources/button-down.png) 4 4 4 4 stretch stretch;
 }
-
-.onyx-button[disabled] {
-	opacity: 0.4;
-}
-
-.onyx-button > img {
-	padding: 0px 3px;
-}
+*/
