--- a/toolbar/source/ToolButton.css
+++ b/toolbar/source/ToolButton.css
@@ -1,14 +1,14 @@
 .onyx-button.onyx-toolbar-item {
-	margin: 3px;
-	color: #f2f2f2;
-	background-color: #333;
-	-webkit-border-image: url(../../resources/button-toolbar.png) 4 4 4 4 stretch stretch;
+	color: #F2F2F2;
+	background-color: #555656;
 }
 
+/*
 .onyx-button:active:not([disabled]).onyx-toolbar-item, .enyo-button.onyx-depressed.enyo-toolbar-item {
-	-webkit-border-image: url(../../resources/button-down.png) 4 4 4 4 stretch stretch;
+	x-webkit-border-image: url(../../resources/button-down.png) 4 4 4 4 stretch stretch;
 }
 
 .enyo-tool-button-client.enyo-button-disabled {
-	opacity: 0.4;
+	xopacity: 0.4;
 }
+*/
