--- a/button/source/Button.css
+++ b/button/source/Button.css
@@ -14,14 +14,14 @@
 	border: none;
 	border-radius: 3px;
 	/**/
-	background: #E1E1E1 url(gradient.png) repeat-x;
+	background: #E1E1E1 url(../../images/gradient.png) repeat-x bottom;
 	box-shadow: inset 0px 0px 1px rgba(0,0,0,0.8), inset 0px 1px 0px rgba(192,192,192,0.25), 0px 1px 1px rgba(128,128,128,0.15);
 	/**/
 	text-overflow: ellipsis;
 }
 
 .onyx-button.active, .onyx-button:active:not([disabled]) {
-	background: url(gradient-invert.png) repeat-x;
+	background: url(../../images/gradient-invert.png) repeat-x top;
 	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.8), inset 0px -1px 0px rgba(192,192,192,0.25), 0px 1px 1px rgba(128,128,128,0.15);
 }
 
