--- a/groupbox/source/Groupbox.css
+++ b/groupbox/source/Groupbox.css
@@ -1,22 +1,29 @@
 .onyx-groupbox {
-	margin: 4px;
+	/*margin: 4px;*/
 }
 
-.onyx-groupbox-item.onyx-groupbox-header {
-	background-color: #343434;
+.onyx-groupbox-header {
+	padding: 2px 10px;
+	/**/
 	color: white;
+	font-size: 0.9em;
+	font-weight: bold;
+	text-transform: uppercase;
+	/**/
+	background-color: #343434;
 	/**/
 	border-color: transparent;
 	border-width: 2px 4px;
+	/**/
 	-webkit-border-image: url(../../resources/toolbar.png) 2 4 repeat stretch;
-	padding: 2px 10px;
 }
 
 .onyx-groupbox-item {
+	display: block;
 	border-color: #aaaaaa;
 	border-style: solid;
 	border-width: 0 1px 1px 1px;
-	padding: 10px;
+	/*padding: 10px;*/
 }
 
 .onyx-groupbox-item:first-child {
