--- a/groupbox/source/Groupbox.css
+++ b/groupbox/source/Groupbox.css
@@ -20,7 +20,7 @@
 
 .onyx-groupbox-item {
 	display: block;
-	border-color: #aaaaaa;
+	border-color: #AAAAAA;
 	border-style: solid;
 	border-width: 0 1px 1px 1px;
 	/*padding: 10px;*/
