--- a/checkbox/source/Checkbox.css
+++ b/checkbox/source/Checkbox.css
@@ -1,13 +1,18 @@
 .onyx-checkbox {
 	cursor: pointer;
-	height: 31px;
-	width: 30px;
+	height: 32px;
+	width: 32px;
+	background: url(../../resources/checkbox.png) no-repeat; 
+	/* reset for ? */
 	margin: 0px;
-	background: url(../../resources/checkbox.png) -1px -1px;
+	/* these entries cause toggle-button and checkbox to line up properly*/
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .onyx-checkbox-checked {
-	background-position: -1px -33px;
+	Xbackground-position: -1px -33px;
+	background-position: 0px -32px;
 }
 
 .onyx-checkbox[disabled] {
