--- a/groupbox/source/Groupbox.css
+++ b/groupbox/source/Groupbox.css
@@ -24,6 +24,9 @@
 	border-style: solid;
 	border-width: 0 1px 1px 1px;
 	/*padding: 10px;*/
+	/* reset styles that make 'item' look bad if they happen to be there */
+	border-radius: 0;
+	margin: 0;
 }
 
 .onyx-groupbox-item:first-child {
