* move resources into images and update css

--- a/toolbar/source/Grabber.css
+++ b/toolbar/source/Grabber.css
@@ -1,5 +1,5 @@
 .onyx-grabber {
-	background: url(../../resources/grabbutton.png) no-repeat center;
+	background: url(../../images/grabbutton.png) no-repeat center;
 	width: 23px;
 	height: 29px;
 }
