--- a/checkbox/source/Checkbox.css
+++ b/checkbox/source/Checkbox.css
@@ -2,7 +2,7 @@
 	cursor: pointer;
 	height: 32px;
 	width: 32px;
-	background: url(../../resources/checkbox.png) no-repeat; 
+	background: url(../../images/checkbox.png) no-repeat; 
 	/* reset for ? */
 	margin: 0px;
 	/* these entries cause toggle-button and checkbox to line up properly*/
