--- a/groupbox/source/Groupbox.css
+++ b/groupbox/source/Groupbox.css
@@ -15,7 +15,7 @@
 	border-color: transparent;
 	border-width: 2px 4px;
 	/**/
-	-webkit-border-image: url(../../resources/toolbar.png) 2 4 repeat stretch;
+	-webkit-border-image: url(../../images/toolbar.png) 2 4 repeat stretch;
 }
 
 .onyx-groupbox-item {
