--- a/input/source/Input.css
+++ b/input/source/Input.css
@@ -15,7 +15,7 @@
 }
 
 .onyx-input-decorator.onyx-focused {
-	/*-webkit-border-image: url(../../resources/input-focus.png) 14 14;*/
+	/*-webkit-border-image: url(../../images/input-focus.png) 14 14;*/
 	/**/
 	/* non-image version */
 	box-shadow: inset 0px 1px 4px rgba(0,0,0,0.3);
