--- a/togglebutton/source/ToggleButton.css
+++ b/togglebutton/source/ToggleButton.css
@@ -15,30 +15,30 @@
 
 .onyx-toggle-button-bar.on {
 	border-width: 0px 30px 0px 8px;
-	-webkit-border-image: url(../../resources/toggle-button.png) 1 30 97 8 repeat repeat;
-	-moz-border-image: url(../../resources/toggle-button.png) 1 30 97 8 repeat repeat;
-	-o-border-image: url(../../resources/toggle-button.png) 1 30 97 8 repeat repeat;
+	-webkit-border-image: url(../../images/toggle-button.png) 1 30 97 8 repeat repeat;
+	-moz-border-image: url(../../images/toggle-button.png) 1 30 97 8 repeat repeat;
+	-o-border-image: url(../../images/toggle-button.png) 1 30 97 8 repeat repeat;
 }
 
 .onyx-toggle-button-bar.off {
 	border-width: 0px 8px 0px 30px;
-	-webkit-border-image: url(../../resources/toggle-button.png) 33 8 65 30 repeat repeat;
-	-moz-border-image: url(../../resources/toggle-button.png) 33 8 65 30 repeat repeat;
-	-o-border-image: url(../../resources/toggle-button.png) 33 8 65 30 repeat repeat;
+	-webkit-border-image: url(../../images/toggle-button.png) 33 8 65 30 repeat repeat;
+	-moz-border-image: url(../../images/toggle-button.png) 33 8 65 30 repeat repeat;
+	-o-border-image: url(../../images/toggle-button.png) 33 8 65 30 repeat repeat;
 }
 
 .onyx-toggle-button-bar.disabled.on {
 	border-width: 0px 30px 0px 8px;
-	-webkit-border-image: url(../../resources/toggle-button.png) 65 30 33 8 repeat repeat;
-	-moz-border-image: url(../../resources/toggle-button.png) 65 30 33 8 repeat repeat;
-	-o-border-image: url(../../resources/toggle-button.png) 65 30 33 8 repeat repeat;
+	-webkit-border-image: url(../../images/toggle-button.png) 65 30 33 8 repeat repeat;
+	-moz-border-image: url(../../images/toggle-button.png) 65 30 33 8 repeat repeat;
+	-o-border-image: url(../../images/toggle-button.png) 65 30 33 8 repeat repeat;
 }
 
 .onyx-toggle-button-bar.disabled.off {
 	border-width: 0px 8px 0px 30px;
-	-webkit-border-image: url(../../resources/toggle-button.png) 97 8 1 30 repeat repeat;
-	-moz-border-image: url(../../resources/toggle-button.png) 97 8 1 30 repeat repeat;
-	-o-border-image: url(../../resources/toggle-button.png) 97 8 1 30 repeat repeat;
+	-webkit-border-image: url(../../images/toggle-button.png) 97 8 1 30 repeat repeat;
+	-moz-border-image: url(../../images/toggle-button.png) 97 8 1 30 repeat repeat;
+	-o-border-image: url(../../images/toggle-button.png) 97 8 1 30 repeat repeat;
 }
 
 .onyx-toggle-content-off, .onyx-toggle-content-on {
