--- a/source/css/Groupbox.css
+++ b/source/css/Groupbox.css
@@ -1,28 +1,11 @@
 .onyx-groupbox {
 }
 
-.onyx-groupbox-header {
-	padding: 2px 10px;
-	/**/
-	color: white;
-	font-size: 0.9em;
-	font-weight: bold;
-	text-transform: uppercase;
-	/**/
-	background-color: #343434;
-	/**/
-	border-color: transparent;
-	border-width: 2px 4px;
-	/**/
-	-webkit-border-image: url(../../images/toolbar.png) 2 4 repeat stretch;
-}
-
 .onyx-groupbox > * {
 	display: block;
 	border-color: #aaaaaa;
-	border-top-color: transparent;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 0 1px 1px 1px;
 	/*padding: 10px;*/
 	/* reset styles that make 'item' look bad if they happen to be there */
 	border-radius: 0;
@@ -31,6 +14,7 @@
 
 .onyx-groupbox > *:first-child {
 	border-top-color: #aaaaaa;
+	border-width: 1px;
 	border-radius: 4px 4px 0 0;
 }
 
@@ -42,18 +26,35 @@
 	border-radius: 4px;
 }
 
+.onyx-groupbox-header {
+	padding: 2px 10px;
+	/**/
+	color: white;
+	font-size: 0.9em;
+	font-weight: bold;
+	text-transform: uppercase;
+	/**/
+	background-color: #343434;
+	/**/
+	border: none;
+	/*border-width: 2px 4px;*/
+	/**/
+	/*-webkit-border-image: url(../../images/toolbar.png) 2 4 repeat stretch;*/
+	background: #4c4c4c url(../../images/gradient.png) repeat-x 0 10px;
+}
+
 .onyx-groupbox .onyx-input-decorator {
 	display: block;
 }
 
 .onyx-groupbox > .onyx-input-decorator {
 	border-color: #aaaaaa;
-	border-top-color: transparent;
+	border-width: 0 1px 1px 1px;
 	border-radius: 0;
 }
 
 .onyx-groupbox > .onyx-input-decorator:first-child {
-	border-top-color: #aaaaaa;
+	border-width: 1px;
 	border-radius: 4px 4px 0 0;
 }
 
