--- a/source/css/Button.css
+++ b/source/css/Button.css
@@ -12,11 +12,13 @@
 	margin: 0;
 	color: #292929;
 	/**/
-	border: none;
 	border-radius: 3px;
+	border: 1px solid rgba(15, 15, 15, 0.2);
+	box-shadow: 0px 1px 0px rgba(164,164,164,0.1), inset 0px 1px 1px rgba(164,164,164,0.35);
 	/**/
-	background: #E1E1E1 url(../../images/gradient.png) repeat-x bottom;
-	box-shadow: inset 0px 0px 1px rgba(0,0,0,0.8), inset 0px 1px 0px rgba(192,192,192,0.25), 0px 1px 1px rgba(128,128,128,0.15);
+	background-color: #E1E1E1;
+	Xbackground: #E1E1E1 url(../../images/gradient.png) repeat-x bottom;
+	background: #E1E1E1 url(../../images/gradient.png) repeat-x;
 	/**/
 	text-overflow: ellipsis;
 }
