--- a/examples/maps/source/MapsApp.css
+++ b/examples/maps/source/MapsApp.css
@@ -7,20 +7,12 @@
 	padding: 1px 10px;
 }
 
-.toolbar .onyx-input-decorator {
-	/* onyx-input-decorator.onyx-toolbar-item has padding: 5px 6px 6px 6px; */
-	padding-top: 0;
-}
-
-.toolbar .menu-button {
-	/* remove shadow and background from onyx-button */
+.menu .menu-button {
+	/* remove shadow, border and background from onyx-button */
 	background: transparent;
+	border: none;
 	box-shadow: none;
-	padding: 0 4px;
-}
-
-.search-input {
-	width: 180px;
+	padding: 0 10px;
 }
 
 .icon {
@@ -39,7 +31,7 @@
 	top: 56px;
 	right: 0;
 	bottom: 0;
-	width: 350px;
+	width: 320px;
 	background: #D8D8D8;
 }
 
@@ -61,9 +53,12 @@
 	border: none;
 	border-radius: 10px 0 0 10px;
 	background: #D8D8D8 url(../images/grabbutton.png) no-repeat;
-	-webkit-box-shadow: -6px 8px 9px -5px rgba(0, 0, 0, 0.7);
-	-moz-box-shadow: -6px 8px 9px -5px rgba(0, 0, 0, 0.7);
-	box-shadow: --6px 8px 9px -5px rgba(0, 0, 0, 0.7);
+	box-shadow: -6px 8px 9px -5px rgba(0, 0, 0, 0.7);
+}
+
+.pullout-toolbar {
+	padding-top: 4px;
+	text-align: center;
 }
 
 .settings {
