--- a/source/css/ToggleButton.css
+++ b/source/css/ToggleButton.css
@@ -1,47 +1,54 @@
 .onyx-toggle-button {
 	display: inline-block;
 	vertical-align: middle;
-	Xmargin: 1px 0;
 	padding: 1px 0;
 }
 
 .onyx-toggle-button-bar {
 	height: 30px;
 	line-height: 32px;
-	min-width: 36px;
+	min-width: 74px;
 	text-align: center;
 	display: inline-block;
+	border-radius: 3px;
+	box-shadow: inset 0px 1px 3px rgba(0,0,0,0.4);
 }
 
 .onyx-toggle-button-bar.on {
-	border-width: 0px 30px 0px 8px;
-	-webkit-border-image: url(../../images/toggle-button.png) 1 30 97 8 repeat repeat;
-	-moz-border-image: url(../../images/toggle-button.png) 1 30 97 8 repeat repeat;
-	-o-border-image: url(../../images/toggle-button.png) 1 30 97 8 repeat repeat;
+	background: #8BBA3D url(../../images/gradient-invert.png) repeat-x bottom;
+	background-size: auto 100%;
 }
 
 .onyx-toggle-button-bar.off {
-	border-width: 0px 8px 0px 30px;
-	-webkit-border-image: url(../../images/toggle-button.png) 33 8 65 30 repeat repeat;
-	-moz-border-image: url(../../images/toggle-button.png) 33 8 65 30 repeat repeat;
-	-o-border-image: url(../../images/toggle-button.png) 33 8 65 30 repeat repeat;
+	background: #B1B1B1 url(../../images/gradient-invert.png) repeat-x bottom;
+	background-size: auto 100%;
 }
 
-.onyx-toggle-button-bar.disabled.on {
-	border-width: 0px 30px 0px 8px;
-	-webkit-border-image: url(../../images/toggle-button.png) 65 30 33 8 repeat repeat;
-	-moz-border-image: url(../../images/toggle-button.png) 65 30 33 8 repeat repeat;
-	-o-border-image: url(../../images/toggle-button.png) 65 30 33 8 repeat repeat;
+.onyx-toggle-button-button {
+	display: inline-block;
+	width: 28px;
+	height: 28px;
+	margin: 1px;
+	border-radius: 3px;
+	background: #F6F6F6 url(../../images/gradient.png) repeat-x;
+	background-size: auto 100%;
 }
 
-.onyx-toggle-button-bar.disabled.off {
-	border-width: 0px 8px 0px 30px;
-	-webkit-border-image: url(../../images/toggle-button.png) 97 8 1 30 repeat repeat;
-	-moz-border-image: url(../../images/toggle-button.png) 97 8 1 30 repeat repeat;
-	-o-border-image: url(../../images/toggle-button.png) 97 8 1 30 repeat repeat;
+.onyx-toggle-button-bar.on .onyx-toggle-button-button {
+	box-shadow: -1px 0px 4px rgba(0,0,0,0.35), inset 0 -1px 0 rgba(0,0,0,0.4);
+}
+
+.onyx-toggle-button-bar.off .onyx-toggle-button-button {
+	box-shadow: 1px 0px 4px rgba(0,0,0,0.35), inset 0 -1px 0 rgba(0,0,0,0.4);
+}
+
+.onyx-toggle-button-bar.disabled {
+	opacity: 0.4;
 }
 
 .onyx-toggle-content-off, .onyx-toggle-content-on {
+	min-width: 32px;
+	padding: 0 6px;
 	color: white;
 	font-size: 14px;
 	font-weight: bold;
@@ -49,11 +56,9 @@
 }
 
 .onyx-toggle-content-off {
-	padding-left: 4px;
-	padding-right: 2px;
+	float: right;
 }
 
 .onyx-toggle-content-on {
-	padding-right: 4px;
-	padding-left: 2px;
+	float: left;
 }
