--- a/source/css/Toolbar.css
+++ b/source/css/Toolbar.css
@@ -8,50 +8,39 @@
 	padding: 9px 8px 10px 8px;
 	/**/
 	border: 1px solid black;
-	background: #4C4C4C url(../../images/gradient.png) repeat-x 0 10px;
+	background: #4C4C4C url(../../images/gradient.png) repeat-x 0 bottom;
 	color: white;
+	/**/
+	white-space: nowrap;
+	overflow: hidden;
 }
 
-.onyx-toolbar > * {
+.onyx-toolbar-inline > * {
 	display: inline-block;
 	vertical-align: middle;
-	margin: 0 6px;
+	margin: 4px 6px 5px;
 }
 
-/*
-.onyx-toolbar.onyx-light {
-	-webkit-border-image: url(../../images/toolbar-light.png) 2 4 repeat stretch;
-	background-color: #a9a9a9;
-	color: black;
+.onyx-toolbar .onyx-icon-button {
+	margin: 3px 2px 1px;
 }
-
-.onyx-toolbar-item {
-	margin: 0 6px;
-	min-height: 32px;
-	line-height: 32px;
-}
-*/
 
 .onyx-toolbar .onyx-button {
 	color: #F2F2F2;
 	background-color: #555656;
 	border-color: rgba(15, 15, 15, 0.5);
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 .onyx-toolbar .onyx-input-decorator {
-	margin: 0 3px;
-	/*
-	border: 6px solid transparent;
-	-webkit-border-image: url(../../images/input-tool.png) 6 6 6 6;
-	*/
+	margin: 1px 3px;
 	box-shadow: inset 0px 1px 4px rgba(0,0,0,0.1);
 	background-color: rgba(0, 0, 0, 0.1);
 	padding: 2px 6px 3px 6px;
 }
 
 .onyx-toolbar .onyx-input-decorator.onyx-focused {
-	/*-webkit-border-image: url(../../images/input-tool-focus.png) 6 6 6 6;*/
-	/* non-image version */
 	box-shadow: inset 0px 1px 4px rgba(0,0,0,0.3);
 	background-color: white;
 }
@@ -68,21 +57,3 @@
 .onyx-toolbar .onyx-input-decorator .onyx-input:focus::-webkit-input-placeholder {
 	color: #ddd;
 }
-
-/* FIXME: basically superfluous */
-/*
-.onyx-header {
-	-webkit-border-image: url(../../images/header.png) 2 0;
-	min-height: 50px;
-	padding: 12px;
-	border-width: 2px 0;
-	background-color: #ccc;
-	color: #444;
-}
-
-.onyx-header.onyx-dark {
-	-webkit-border-image: url(../../images/toolbar.png) 2 4 repeat stretch;
-	background-color: #343434;
-	color: #fff;
-}
-*/
