--- a/source/css/onyx.css
+++ b/source/css/onyx.css
@@ -17,7 +17,7 @@ html, body, input, button {
 
 
 .onyx {
-	font-family: Prelude, Prelude Medium, Segoe UI, Arial, Helvetica, Sans-Serif;
+	font-family: Prelude, Prelude Medium, Segoe UI, Neue Helvetica, Arial, Helvetica, Sans-Serif;
 	font-size: 20px;
 	cursor: default;
 	background-color: #eaeaea;
