--- a/source/css/Button.css
+++ b/source/css/Button.css
@@ -1,31 +1,62 @@
 .onyx-button {
-	font-size: 16px;
 	outline: 0;
-	text-align: center;
-	padding: 6px 18px;
-	min-width: 14px;
-	min-height: 20px;
 	/**/
+	color: #292929;
+	font-size: 16px;
+	text-align: center;
 	white-space: nowrap;
-	overflow: hidden;
 	/**/
 	margin: 0;
-	color: #292929;
+	padding: 6px 18px;
+	overflow: hidden;
 	/**/
 	border-radius: 3px;
+	/* for IE8 */
+	border: 1px solid #777;
 	border: 1px solid rgba(15, 15, 15, 0.2);
-	box-shadow: 0px 1px 0px rgba(164,164,164,0.1), inset 0px 1px 1px rgba(164,164,164,0.35);
+	/*
+		The border and the gradient interact in a strange way that
+		causes the bottom-border (top if the gradient is aligned top)
+		to be lighter than other borders.
+		We can fix it by using the darker bottom border below, but
+		then there are a few rogue pixels that end up very dark.
+	*/
+	/* border-bottom: 1px solid rgba(15, 15, 15, 0.5); */
+	box-shadow: inset 0px 1px 0px rgba(255,255,255,0.2);
+	/*
+		box-shadow: 0px 1px 0px rgba(164,164,164,0.1), inset 0px 1px 1px rgba(164,164,164,0.35);
+		text-shadow: 0 -1px 1px rgba(0,0,0,0.2);
+	 	background-color: #E1E1E1;
+	*/
 	/**/
-	background-color: #E1E1E1;
-	Xbackground: #E1E1E1 url(../../images/gradient.png) repeat-x bottom;
-	background: #E1E1E1 url(../../images/gradient.png) repeat-x;
+	background: #E1E1E1 url(../../images/gradient.png) repeat-x bottom;
 	/**/
 	text-overflow: ellipsis;
+	/* the following cause arcane problems on IE */
+	/*
+	min-width: 14px;
+	min-height: 20px;
+	*/
 }
 
-.onyx-button.active, .onyx-button:active:not([disabled]) {
-	background: url(../../images/gradient-invert.png) repeat-x top;
-	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.8), inset 0px -1px 0px rgba(192,192,192,0.25), 0px 1px 1px rgba(128,128,128,0.15);
+/*
+	IE8 can't handle these selectors in tandem:
+	.onyx-button.active, .onyx-button:active:not([disabled]) {
+
+	the effect is as if .onyx-button.active doesn't exist
+*/
+.onyx-button.active {
+	background-image: url(../../images/gradient-invert.png);
+	background-position: top;
+	border-top: 1px solid rgba(15, 15, 15, 0.6);
+	box-shadow: inset 0px 1px 0px rgba(0,0,0,0.1);
+}
+
+.onyx-button:active:not([disabled]) {
+	background-image: url(../../images/gradient-invert.png);
+	background-position: top;
+	border-top: 1px solid rgba(15, 15, 15, 0.6);
+	box-shadow: inset 0px 1px 0px rgba(0,0,0,0.1);
 }
 
 .onyx-button[disabled] {
@@ -34,4 +65,21 @@
 
 .onyx-button > img {
 	padding: 0px 3px;
+}
+
+/* optional */
+
+.onyx-affirmative {
+	background-color: #91BA07;
+	color: #F1F1F1;
+}
+
+.onyx-negative {
+	background-color: #C51616;
+	color: #F1F1F1;
+}
+
+.onyx-blue {
+	background-color: #35A8EE;
+	color: #F1F1F1;
 }
