--- a/source/css/RadioButton.css
+++ b/source/css/RadioButton.css
@@ -1,18 +1,19 @@
 .onyx-radiobutton {
 	padding: 8px 12px;
 	margin: 0;
-	border: 0;
 	outline: 0;
-	text-align: center;
 	/**/
 	font-size: 16px;
+	text-shadow: 0 1px 1px rgba(0,0,0,0.2);
+	text-align: center;
+	/**/
 	background: #E7E7E7 url(../../images/gradient.png) repeat-x bottom;
-	/* fancy */
-	box-shadow: inset 0px 0px 1px 1px #888;
-	/* questionable */
-	/*
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-	*/
+	/* IE8 */
+	border: 1px solid #333;
+	border: 1px solid rgba(15, 15, 15, 0.2);
+	/* turn off right-border in a way IE8 ignores, because IE8 does not support :last-child */
+	border-right-color: rgba(0,0,0,0);
+	box-shadow: inset 1px 1px 0px rgba(255, 255, 255, 0.2);
 }
 
 .onyx-radiobutton:first-child {
@@ -21,9 +22,14 @@
 
 .onyx-radiobutton:last-child {
 	border-radius: 0px 3px 3px 0px;
+	/* IE8 */
+	border-right: 1px solid #333;
+	border-right: 1px solid rgba(15, 15, 15, 0.2);
 }
 
 .onyx-radiobutton.active {
 	color: White;
 	background: #0091F2 url(../../images/gradient-invert.png) repeat-x top;
+	border-top: 1px solid rgba(15, 15, 15, 0.6);
+	box-shadow: inset 1px 2px 2px rgba(0, 0, 0, 0.2);
 }
