--- a/source/css/Toolbar.css
+++ b/source/css/Toolbar.css
@@ -7,7 +7,7 @@
 	*/
 	padding: 9px 8px 10px 8px;
 	/**/
-	border: 1px solid black;
+	border: 1px solid #3A3A3A;
 	background: #4C4C4C url(../../images/gradient.png) repeat-x 0 bottom;
 	color: white;
 	/**/
