--- a/source/css/Groupbox.css
+++ b/source/css/Groupbox.css
@@ -31,7 +31,7 @@
 	padding: 2px 10px;
 	/**/
 	color: white;
-	font-family: Segoe UI;
+	font-family: Segoe UI, Neue Helvetica, Helvectica, Arial, sans-serif;
 	font-size: 14px;
 	font-weight: bold;
 	text-transform: uppercase;
