--- a/source/css/Input.css
+++ b/source/css/Input.css
@@ -1,30 +1,19 @@
 .onyx-input-decorator {
-	/*
-	border-width: 14px;
-	border-style: solid;
-	border-color: transparent;
-	*/
-	/**/
-	/* non-image version */
-	padding: 12px;
+	padding: 6px 8px 10px 8px;
 	border-radius: 3px;
 	border: 1px solid;
 	border-color: rgba(0,0,0,0.1);
-	/* reset bootstrap 'label' styling */
 	margin: 0;
 }
 
 .onyx-input-decorator.onyx-focused {
-	/*-webkit-border-image: url(../../images/input-focus.png) 14 14;*/
-	/**/
-	/* non-image version */
 	box-shadow: inset 0px 1px 4px rgba(0,0,0,0.3);
 	border-color: rgba(0,0,0,0.3);
 	background-color: white;
 }
 
 .onyx-input-decorator.onyx-disabled {
-	/* FIXME: test before including: needed to color a disabled input placeholder. */
+	/* FIXME: needed to color a disabled input placeholder. */
 	/*-webkit-text-fill-color: #888;*/
 	opacity: 0.3;
 }
@@ -38,9 +27,8 @@
 	cursor: pointer;
 	background-color: transparent;
 	font-size: 16px;
-	/* reset bootstrap 'input' styling */
 	box-shadow: none;
-	/* FIXME: test before including: hack for styling reset on Android */
+	/* FIXME: hack for styling reset on Android */
 	/* -webkit-appearance: caret;*/
 }
 
