Give the toggle button the ability to animate between states, i.e. let the knob slide instead of jump between left and right. User can also drag the knob around to change the button state.

--- a/source/css/ToggleButton.css
+++ b/source/css/ToggleButton.css
@@ -61,3 +61,22 @@
 .onyx-toggle-content.on {
 	float: left;
 }
+
+.onyx-toggle-button.onyx-toggle-button-animated {
+	/* We need this so that the knob is positioned relatively to the toggle button */
+	position: relative;
+}
+
+.onyx-toggle-button.onyx-toggle-button-animated .onyx-toggle-button-knob {
+	display: block;
+	position: absolute;
+}
+
+.onyx-toggle-button.onyx-toggle-button-animated .onyx-toggle-content.off {
+	margin-left: 30px;
+}
+
+.onyx-toggle-button.onyx-toggle-button-animated .onyx-toggle-content.on {
+	margin-right: 30px;
+}
+
