--- a/source/css/onyx.css
+++ b/source/css/onyx.css
@@ -4,7 +4,7 @@
 	cursor: default;
 	background-color: #EAEAEA;
 	/* remove automatic tap highlight color */
-	-webkit-tap-highlight-color: transparent;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 /* prevent IE from inheriting line-height for these elements */
